public/stylesheets/screen.css
@charset "UTF-8";

/*** FONTS ***/

@font-face {
	font-family: 'Material Icons';
	font-style: normal;
	font-weight: 400;
	src: url(/bower_components/material-design-icons/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
	src: local('Material Icons'),
	local('MaterialIcons-Regular'),
	url(/bower_components/material-design-icons/iconfont/MaterialIcons-Regular.woff2) format('woff2'),
	url(/bower_components/material-design-icons/iconfont/MaterialIcons-Regular.woff) format('woff'),
	url(/bower_components/material-design-icons/iconfont/MaterialIcons-Regular.ttf) format('truetype');
}

.material-icons {
	font-family: 'Material Icons';
	font-weight: normal;
	font-style: normal;
	font-size: 24px;  /* Preferred icon size */
	display: inline-block;
	line-height: 1;
	text-transform: none;
	letter-spacing: normal;
	word-wrap: normal;
	white-space: nowrap;
	direction: ltr;

	/* Support for all WebKit browsers. */
	-webkit-font-smoothing: antialiased;
	/* Support for Safari and Chrome. */
	text-rendering: optimizeLegibility;

	/* Support for Firefox. */
	-moz-osx-font-smoothing: grayscale;

	/* Support for IE. */
	font-feature-settings: 'liga';
}

/*** STYLES ***/

body {
	padding: 0; margin: 0;
	background-color: #f9f9f5;
}

header#siteHeader {
	background: url(/images/wave.png) repeat-x;
	background-size: auto 62px;
	background-position: 43px 0;
	height: 104px;
	position: absolute;
	left: 0; right: 0;
	z-index: 51;
}
header img {
	vertical-align: top;
	background-color: #f9f9f5;
}
header nav {
	background-color: #1e90ff;
	border-bottom: 2px solid #1c60cc;
	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
}
header nav ul {
	list-style: none;
	padding: 0;
	margin: 0;

	height: 40px
}
header nav ul li {
	display: inline-block;
	margin: 0 0.5em;
	height: 40px;
	line-height: 38px;
}
header nav ul li a {
	color: #cceeff;
	text-decoration: none;
	text-transform: uppercase;
	font-family: "Open Sans", sans-serif;
	font-size: 0.9em;
	font-weight: bold;
	transition: color 0.1s;
}
header nav ul li a:hover {
	color: #e9f3ff;
	transition: color 0.1s;
}
header nav ul li a i.material-icons {
	margin-right: 0.3rem;
	font-size: 24px;
	width: 24px;
	position: relative;
	top: 6px;
}

section#main {
	padding: 30px;
	position: absolute;
	left: 0; right: 0; bottom: 0; top: 104px;
}
section#main h1 {
	overflow: hidden;
	margin-top: 0;
	padding-bottom: 5px;
	font-family: "Open Sans", sans-serif;
	color: #333;
	border-bottom: 2px solid #6f9fce;
}
section#main h1 > span {
	float: left;
	vertical-align: top;
}
section#main h1 div#controls {
	float: right;
	vertical-align: top;
}
section#main h1 div#controls button {
	margin-left: 0.5rem;
}
section#main h1#bigForm {
	max-width: 300px;
	margin: auto;
	border-bottom: none;
	color: #555;
}

section#main p {
	font-family: "Open Sans", sans-serif;
	font-size: 1.4rem;
	line-height: 1.5em;
	color: #444;
}

section#main blockquote {
	position: relative;
	margin-right: 40px;
}
section#main blockquote p {
	color: #555;
	font-weight: 300;
	text-align: justify;
	display: inline-block;
	position: relative;
}
section#main blockquote footer:before {
	content: "— ";
}
section#main blockquote footer {
	text-align: right;
	margin-right: 160px;
	font-family: "Open Sans", sans-serif;
	font-style: italic;
	font-weight: bold;
	color: #333;
}
section#main blockquote p:before {
	content: "“";

	position: absolute;
	top: 5px;
	left: -50px;

	font-size: 6rem;
	font-family: serif;
	color: #888;
}
section#main blockquote p:after {
	content: "”";

	position: absolute;
	top: 10px;
	right: -50px;

	font-size: 6rem;
	font-family: serif;
	color: #888;
}

#gabeFace {
	transition: left 0.2s ease-out;
}

#cursor {
	position: absolute;
	z-index: 100;
	margin-top: -46px;
	user-select: none;
	pointer-events: none;
}

button#toggleCanvas {
	position: fixed;
	right: 20px;
	bottom: 20px;
	z-index: 95;
	box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.3), inset 0px 1px 0px rgba(255, 255, 255, 0.2);

	display: none;
}

/* conversation stuff */

ul#conversations {
	list-style: none;
	padding: 0;
	margin: 20px 0;
	border-radius: 3px;
	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.05);
}
ul#conversations li.conversation {
	position: relative;
	height: 48px;

	border: 1px solid #bbb;
	border-bottom: none;
	background-color: #fefefd;

	font-family: "Open Sans", sans-serif;

	white-space: nowrap;
	overflow-x: hidden;
}
ul#conversations li.conversation:first-child {
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}
ul#conversations li.conversation:last-child {
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
	border-bottom: 1px solid #bbb;
}
ul#conversations li.conversation div.link {
	position: relative;
	z-index: 11;

	display: inline-block;
	height: 48px;
	line-height: 48px;

	/*background-color: #fefefd;*/
	border-right: 1px solid #bbb;
	padding: 0 15px;
}
ul#conversations li.conversation a {
	color: #666;
}
ul#conversations li.conversation div.memberList {
	display: inline-block;
	height: 48px;
	line-height: 48px;

	padding: 0 15px;

	color: #333;
}
ul#conversations li.conversation div.date {
	position: absolute;
	right: 0px;
	display: inline-block;
	height: 47px;
	z-index: 10;
	padding-left: 5px;
	padding-right: 15px;

	background-color: #fefefd;

	font-size: 0.8rem;
	line-height: 48px;
	color: #777;
}
ul#conversations li.conversation div.date:before {
	position: absolute;
	left: -20px;
	width: 20px; height: 47px;
	display: inline-block;

	background: linear-gradient(to right, rgba(255, 255, 255, 0) , white);
	content: "";
}
ul#conversations li.conversation.deletable div.date {
	right: 48px;
	border-right: 1px solid #e0e0e0;
	padding-right: 15px;
}
ul#conversations li.conversation div.controls {
	float: right;
}
ul#conversations li.conversation div.controls button {
	position: relative;
	top: 8px;
	right: 15px;
}

div#conversation {
	position: absolute;
	z-index: 49;
	left: 0; right: 0; bottom: 0; top: 0;
	box-sizing: border-box;
	overflow: hidden;
}
/* ... */

